@@ -4,11 +4,14 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.moa.backend.domain.follow.dto.SimpleMakerSummary;
 import com.moa.backend.domain.follow.dto.SimpleSupporterSummary;
+import com.moa.backend.domain.follow.entity.SupporterBookmarkProject;
 import com.moa.backend.domain.follow.entity.SupporterFollowMaker;
 import com.moa.backend.domain.follow.entity.SupporterFollowSupporter;
+import com.moa.backend.domain.follow.repository.SupporterBookmarkProjectRepository;
 import com.moa.backend.domain.follow.repository.SupporterFollowMakerRepository;
 import com.moa.backend.domain.follow.repository.SupporterFollowSupporterRepository;
 import com.moa.backend.domain.maker.entity.Maker;
+import com.moa.backend.domain.project.dto.ProjectListResponse;
 import com.moa.backend.domain.user.dto.SupporterProfileResponse;
 import com.moa.backend.domain.user.dto.SupporterProfileUpdateRequest;
 import com.moa.backend.domain.user.entity.SupporterProfile;
@@ -20,7 +23,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,13 +31,18 @@ public class SupporterProfileService {
     private final SupporterProfileRepository supporterProfileRepository;
     private final ObjectMapper objectMapper;
 
+    // 팔로우 정보 조회용
     private final SupporterFollowSupporterRepository supporterFollowSupporterRepository;
     private final SupporterFollowMakerRepository supporterFollowMakerRepository;
 
+    // ✅ 내가 찜한 프로젝트 조회용
+    private final SupporterBookmarkProjectRepository supporterBookmarkProjectRepository;
+
     /**
-     * 내 서포터 프로필 조회
+     * 한글 설명: 내 서포터 프로필 조회
      * - 기본 프로필 정보
-     * - 내가 팔로우한 서포터/메이커 카운트 + 리스트까지 함께 포함
+     * - 내가 팔로우한 서포터/메이커 정보
+     * - 내가 찜한 프로젝트 목록
      */
     @Transactional(readOnly = true)
     public SupporterProfileResponse getProfile(Long userId) {
@@ -44,23 +51,22 @@ public class SupporterProfileService {
     }
 
     /**
-     * 내 서포터 프로필 수정
-     * - 수정 후 최신 팔로우 정보까지 포함해서 응답
+     * 한글 설명: 내 서포터 프로필 수정
+     * - 변경 가능한 필드만 갱신
+     * - 수정 후 최신 팔로우 / 찜 정보까지 포함해서 반환
      */
     @Transactional
     public SupporterProfileResponse updateProfile(Long userId, SupporterProfileUpdateRequest request) {
         SupporterProfile profile = getProfileOrThrow(userId);
-
         applyUpdates(profile, request);
-
         return toResponseWithFollows(profile);
     }
 
     // ================== 내부 헬퍼 메서드 ==================
 
     /**
-     * userId 기준으로 서포터 프로필 조회
-     * 없으면 AppException(NOT_FOUND) 발생
+     * 한글 설명: userId 기준으로 서포터 프로필 조회
+     * - 없으면 AppException(NOT_FOUND) 발생
      */
     private SupporterProfile getProfileOrThrow(Long userId) {
         return supporterProfileRepository.findByUserId(userId)
@@ -69,8 +75,8 @@ public class SupporterProfileService {
     }
 
     /**
-     * 요청값 기반으로 SupporterProfile 필드 업데이트
-     * (null이 아닌 값만 반영)
+     * 한글 설명: 요청값 기반으로 SupporterProfile 필드 업데이트
+     * - null 이 아닌 값만 반영
      */
     private void applyUpdates(SupporterProfile profile, SupporterProfileUpdateRequest request) {
         if (request.displayName() != null) {
@@ -95,20 +101,18 @@ public class SupporterProfileService {
             profile.updatePostalCode(request.postalCode());
         }
         if (request.interests() != null) {
-            // List<String> → JSON 문자열로 저장
+            // 한글 설명: List<String> → JSON 문자열로 저장
             profile.updateInterests(toJson(request.interests()));
         }
     }
 
     /**
-     * 서포터 프로필 + 팔로우 정보까지 포함한 응답 DTO 생성
-     *
-     * 1. SupporterProfileResponse.of(...) 로 기본 프로필/관심사 매핑
-     * 2. 팔로우 쿼리로 카운트/리스트 가져와서 다시 record 생성
+     * 한글 설명: 서포터 프로필 + 팔로우 카운트/리스트 + 찜한 프로젝트 리스트까지 포함한 DTO로 변환
      */
     private SupporterProfileResponse toResponseWithFollows(SupporterProfile profile) {
 
         // 1) 기본 프로필 부분은 기존 팩토리 메서드 재사용
+        //    - 여기서 interestsJson → List<String> 으로 이미 변환됨
         SupporterProfileResponse base = SupporterProfileResponse.of(
                 profile.getUserId(),
                 profile.getDisplayName(),
@@ -143,7 +147,7 @@ public class SupporterProfileService {
                             target.getImageUrl()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // 4) 메이커 요약 DTO 리스트 매핑
         List<SimpleMakerSummary> followingMakers = makerRelations.stream()
@@ -155,9 +159,18 @@ public class SupporterProfileService {
                             maker.getImageUrl()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        // 5) 기본 프로필 + 팔로우 정보까지 합쳐서 최종 DTO 생성
+        // 5) ✅ 내가 찜한 프로젝트들 조회
+        List<SupporterBookmarkProject> bookmarkRelations =
+                supporterBookmarkProjectRepository.findBySupporter(profile);
+
+        // 한글 설명: 각 북마크 관계에서 project 꺼내서 리스트용 DTO로 변환
+        List<ProjectListResponse> bookmarkedProjects = bookmarkRelations.stream()
+                .map(rel -> ProjectListResponse.base(rel.getProject()).build())
+                .toList();
+
+        // 6) 최종 응답 DTO 생성
         return new SupporterProfileResponse(
                 base.userId(),
                 base.displayName(),
@@ -167,18 +180,19 @@ public class SupporterProfileService {
                 base.address1(),
                 base.address2(),
                 base.postalCode(),
-                base.interests(),
+                base.interests(),              // 이미 List<String> 으로 파싱된 값
                 base.createdAt(),
                 base.updatedAt(),
                 followingSupporterCount,
                 followingMakerCount,
                 followingSupporters,
-                followingMakers
+                followingMakers,
+                bookmarkedProjects             // ✅ 내가 찜한 프로젝트들
         );
     }
 
     /**
-     * List<String> → JSON 문자열
+     * 한글 설명: List<String> → JSON 문자열
      */
     private String toJson(Object value) {
         try {
